# improvly

./: .gitignore  README.md
.github/: copilot-instructions.md  current-pr-goals.md
.github/instructions/: adr.instructions.md  code-organization.instructions.md  core-principles.instructions.md  data-access.instructions.md  documentation.instructions.md  error-handling.instructions.md  logging.instructions.md  security.instructions.md  testing.instructions.md
backend/: .env.example  database.py  main.py  package-lock.json  package.json  pyproject.toml  server.js
backend/__tests__/: health.test.js
backend/database/: README.md  schema.dbml  schema.sql
backend/database/seeds/: dev_user.sql
backend/tests/: test_health.py
docs/architecture-design-records/: 001-use-postgresql-as-primary-database.md
docs/design-lessons/: README.md  scalability-lessons.md
